kuberntes/api_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
        - name: api-service
          image: antonio3005/elaborato-ds-api_service:latest
          ports:
            - containerPort: 5000
          command: ["python", "-u", "micro_tagger.py"]
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
