kuberntes/mysql_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-api
  namespace: my-namespace
spec:
  selector:
    app: mysql-api
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-api
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-api
  template:
    metadata:
      labels:
        app: mysql-api
    spec:
      containers:
        - name: mysql-api
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data-api
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data-api
          persistentVolumeClaim:
            claimName: mysql-data-api
