kuberntes/mysql_bestflights.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-bestflights
spec:
  selector:
    app: mysql-bestflights
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-bestflights
spec:
  serviceName: "mysql-bestflights"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-bestflights
  template:
    metadata:
      labels:
        app: mysql-bestflights
    spec:
      containers:
        - name: mysql-bestflights
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data-bestflights
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: userdb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi
