kuberntes/mysql_subscription.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-subscription
  namespace: my-namespace
spec:
  selector:
    app: mysql-subscription
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-subscription
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-subscription
  template:
    metadata:
      labels:
        app: mysql-subscription
    spec:
      containers:
        - name: mysql-subscription
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data-subscription
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data-subscription
          persistentVolumeClaim:
            claimName: mysql-data-subscription
