kuberntes/mysql_users.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-users
spec:
  selector:
    app: mysql-users
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-users
  template:
    metadata:
      labels:
        app: mysql-users
    spec:
      containers:
        - name: mysql-users
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data-users
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data-users
          persistentVolumeClaim:
            claimName: mysql-data-users
