kuberntes/subscription_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscription-service
  template:
    metadata:
      labels:
        app: subscription-service
    spec:
      containers:
        - name: subscription-service
          image: antonio3005/elaborato-ds-subscription_service:latest
          ports:
            - containerPort: 5000
          command: ["flask", "--app", "subscription", "run", "--host=0.0.0.0"]
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-service
spec:
  selector:
    app: subscription-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
