kuberntes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /subscription
            pathType: Prefix
            backend:
              service:
                name: subscription-service
                port:
                  number: 80
          - path: /sla
            pathType: Prefix
            backend:
              service:
                name: sla-manager
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /notifier
            pathType: Prefix
            backend:
              service:
                name: notifier-service
                port:
                  number: 80
